# Xenna

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  index.html  package-lock.json  package.json  railway.toml  vite.config.js
src/: main.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 0001_schema_base.sql  0002_seed_organismes.sql  0003_seed_plafonds.sql  0004_seed_cotisations.sql  0005_fillon_nouvelle_formule.sql  0006_smic_2026.sql  0007_historique_taux_2015.sql  0008_alsace_moselle.sql  0009_forge_metier.sql  0010_poste_est_actuel.sql  0011_paie_internationale.sql  0012_seed_cotisations_ch.sql  0013_seed_cotisations_lu.sql  0014_correctifs_2025_2026.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/calculs/: annee.rs  bulletin.rs  ch_bulletin.rs  ch_cotisations.rs  cotisations.rs  lu_bulletin.rs  lu_cotisations.rs  mod.rs
src-tauri/src/commands/: mod.rs  paie.rs
src-tauri/src/db/: context.rs  mod.rs
src-tauri/src/forge/: mod.rs  models.rs  routes.rs
src-tauri/src/models/: bulletin.rs  mod.rs
