[package]
name    = "xenna-paie"
version = "1.1.0"
edition = "2021"

[lib]
name = "xenna_paie_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "web"
path = "src/bin/web.rs"

[dependencies]
tauri            = { version = "2", features = [] }
tauri-plugin-shell = "2"

axum           = { version = "0.8", features = ["macros"] }
tokio          = { version = "1",   features = ["full"] }
tower-http     = { version = "0.6", features = ["cors", "trace", "fs"] }

sqlx = { version = "0.8", features = [
  "runtime-tokio-rustls",
  "sqlite",
  "macros",
  "migrate",
  "chrono",
] }

rust_decimal        = { version = "1", features = ["serde-with-str"] }
rust_decimal_macros = "1"

serde      = { version = "1", features = ["derive"] }
serde_json = "1"

chrono    = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow    = "1"

tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
opt-level = 3
lto       = true
strip     = true
