[package]
name        = "xenna-paie"
version     = "0.1.1"
edition     = "2021"
default-run = "web"

[lib]
name = "xenna_paie_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "web"
path = "src/bin/web.rs"

[features]
default = ["desktop"]
desktop = ["dep:tauri", "dep:tauri-plugin-shell", "dep:tauri-build"]

[dependencies]
tauri            = { version = "2", features = [], optional = true }
tauri-plugin-shell = { version = "2", optional = true }

axum           = { version = "0.8", features = ["macros"] }
tokio          = { version = "1",   features = ["full"] }
tower-http     = { version = "0.6", features = ["cors", "trace", "fs"] }

sqlx = { version = "0.8", features = [
  "runtime-tokio-rustls",
  "sqlite",
  "macros",
  "migrate",
  "chrono",
] }

rust_decimal        = { version = "1", features = ["serde-str"] }
rust_decimal_macros = "1"

serde      = { version = "1", features = ["derive"] }
serde_json = "1"

chrono    = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow    = "1"

tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
# optional = true → compilé seulement si la feature "desktop" est active.
# Sans ça, tauri-build tire toute la chaîne Tauri (serde_with, time…)
# même avec --no-default-features, ce qui bloque le build web sur Rust < 1.88.
tauri-build = { version = "2", features = [], optional = true }

[profile.release]
opt-level = 2
lto       = "thin"
strip     = true
codegen-units = 8
